@@ -57,7 +57,8 @@ Current development version 3.27-08 (2018-02-09)
 - 07: Issue #4: Icon scaling revised, many icons renewed [rugk, S. Sobisch]2
 - 07: Issue #81: Plugin icons (e.g. for import) weren't properly scaled <2>
 - 08: Issue #4: Arranger toolbar icons cleaned (had some pixel artefacts) <2>
-- 08: Issue #4: Mixed-up icons sorted out icon set accomplishments <2>
+- 08: Issue #4: Mixed-up icons sorted out and icon set accomplishments <2>
+- 08: Bugfix #507: Impact of branch labels on IF element shape ensured <2>
 
 Version 3.27 (2017-10-30)
 - 01: Issue #312: Work area now ensured to get initial focus <2>
